feature: 스페어는 1개, 스트라이크는 2개를 나타낸는 보너스 점수
Score의 일급 컬렉션인 BonusScores
 - 스트라이크나 스페어를 치면 알맞은 크기의 BonusScores를 생성
 - 투구 할때마다 그 투구 결과를 반영
 - 투구 마다 남아있는 보너스가 있다면 다음으로 넘김
 - 새로운 투구가 클리어면 새로운 보너스 추가
 - 점수 계산을 하려면 재설계 필요
   - 새로운 투구에 의한 새 보너스는 이번 프레임이 받을 보너스이므로 별도 관리되어야 함 -> 이게 합산될 점수
 - 프레임에 너무 많은 속성이 있다
   - 새 보너스와 이전 보너스들을 묶는 보너스의 일급 컬렉션
   - 보너스들과 투구 결과를 묶는 프레임 결과